--- a/frontend/uomo-html.flexkitux.com/Demo1/product1_simple.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/product1_simple.html
@@ -1400,7 +1400,6 @@
       <h2 class="h3 text-uppercase mb-4 pb-xl-2 mb-xl-4 text-center">
         Các sản phẩm liên quan
       </h2>
-
       <div id="related_products" class="position-relative">
         <div class="swiper-container js-swiper-slider" data-settings='{
             "autoplay": false,
@@ -1453,12 +1452,12 @@
               </div>
 
               <div class="pc__info position-relative">
-                <p class="pc__category">Dresses</p>
+                <p class="pc__category">Áo Polo</p>
                 <h6 class="pc__title">
-                  <a href="product1_simple.html">Kirby T-Shirt</a>
+                  <a href="product1_simple.html">Áo Polo Nam Procool ICONDENIM Seam Sealing</a>
                 </h6>
                 <div class="product-card__price d-flex">
-                  <span class="money price">$17</span>
+                  <span class="money price">389.000đ</span>
                 </div>
 
                 <button class="pc__btn-wl position-absolute top-0 end-0 bg-transparent border-0 js-add-wishlist"
@@ -1486,12 +1485,12 @@
               </div>
 
               <div class="pc__info position-relative">
-                <p class="pc__category">Dresses</p>
+                <p class="pc__category">Áo Hoodie</p>
                 <h6 class="pc__title">
-                  <a href="product1_simple.html">Cropped Faux Leather Jacket</a>
+                  <a href="product1_simple.html">Áo Hoodie Nam ICONDENIM ft MARVEL Deadpool</a>
                 </h6>
                 <div class="product-card__price d-flex">
-                  <span class="money price">$29</span>
+                  <span class="money price">399.000đ</span>
                 </div>
                 <div class="product-card__review d-flex align-items-center">
                   <div class="reviews-group d-flex">
@@ -1539,12 +1538,13 @@
               </div>
 
               <div class="pc__info position-relative">
-                <p class="pc__category">Dresses</p>
+                <p class="pc__category">Áo polo</p>
                 <h6 class="pc__title">
-                  <a href="product1_simple.html">Calvin Shorts</a>
+                  <a href="product1_simple.html">Áo Polo Nam Procool ICONDENIM Seam Sealing
+                  </a>
                 </h6>
                 <div class="product-card__price d-flex">
-                  <span class="money price">$62</span>
+                  <span class="money price">389.000đ</span>
                 </div>
 
                 <button class="pc__btn-wl position-absolute top-0 end-0 bg-transparent border-0 js-add-wishlist"
@@ -1572,12 +1572,12 @@
               </div>
 
               <div class="pc__info position-relative">
-                <p class="pc__category">Dresses</p>
+                <p class="pc__category">Áo Thun</p>
                 <h6 class="pc__title">
-                  <a href="product1_simple.html">Shirt In Botanical Cheetah Print</a>
+                  <a href="product1_simple.html">Áo Thun Nam ICONDENIM MARVEL Captain Sentinel Of Liberty</a>
                 </h6>
                 <div class="product-card__price d-flex">
-                  <span class="money price">$62</span>
+                  <span class="money price">349.000đ</span>
                 </div>
 
                 <button class="pc__btn-wl position-absolute top-0 end-0 bg-transparent border-0 js-add-wishlist"
@@ -1605,12 +1605,12 @@
               </div>
 
               <div class="pc__info position-relative">
-                <p class="pc__category">Dresses</p>
+                <p class="pc__category">Áo polo</p>
                 <h6 class="pc__title">
-                  <a href="product1_simple.html">Cotton Jersey T-Shirt</a>
+                  <a href="product1_simple.html">Áo Polo ICONDENIM Shade Flow</a>
                 </h6>
                 <div class="product-card__price d-flex">
-                  <span class="money price">$17</span>
+                  <span class="money price">314.000đ</span>
                 </div>
 
                 <button class="pc__btn-wl position-absolute top-0 end-0 bg-transparent border-0 js-add-wishlist"
@@ -1638,13 +1638,13 @@
               </div>
 
               <div class="pc__info position-relative">
-                <p class="pc__category">Dresses</p>
+                <p class="pc__category">Áo Thun</p>
                 <h6 class="pc__title">
-                  <a href="product1_simple.html">Cableknit Shawl</a>
+                  <a href="product1_simple.html">Áo Thun Nam Procool ICONDENIM Seam Sealing</a>
                 </h6>
                 <div class="product-card__price d-flex">
-                  <span class="money price price-old">$129</span>
-                  <span class="money price price-sale">$99</span>
+                  <span class="money price price-old">359.000đ</span>
+                  <span class="money price price-sale">319.000đ</span>
                 </div>
 
                 <button class="pc__btn-wl position-absolute top-0 end-0 bg-transparent border-0 js-add-wishlist"
@@ -1673,12 +1673,12 @@
               </div>
 
               <div class="pc__info position-relative">
-                <p class="pc__category">Dresses</p>
+                <p class="pc__category">Áo Sơ Mi</p>
                 <h6 class="pc__title">
-                  <a href="product1_simple.html">Colorful Jacket</a>
+                  <a href="product1_simple.html">Áo Sơ Mi Nam Bamboo ICONDENIM Vertical Stripe</a>
                 </h6>
                 <div class="product-card__price d-flex">
-                  <span class="money price">$29</span>
+                  <span class="money price">390.000đ</span>
                 </div>
 
                 <button class="pc__btn-wl position-absolute top-0 end-0 bg-transparent border-0 js-add-wishlist"
@@ -1707,13 +1707,13 @@
               </div>
 
               <div class="pc__info position-relative">
-                <p class="pc__category">Dresses</p>
+                <p class="pc__category">Áo Sơ Mi</p>
                 <h6 class="pc__title">
-                  <a href="product1_simple.html">Zessi Dresses</a>
+                  <a href="product1_simple.html">Áo Sơ Mi Nam ICONDENIM Oxford</a>
                 </h6>
                 <div class="product-card__price d-flex">
-                  <span class="money price price-old">$129</span>
-                  <span class="money price price-sale">$99</span>
+                  <span class="money price price-old">399.000đ</span>
+                  <span class="money price price-sale">329.000đ</span>
                 </div>
 
                 <button class="pc__btn-wl position-absolute top-0 end-0 bg-transparent border-0 js-add-wishlist"
