--- a/frontend/uomo-html.flexkitux.com/Demo1/product2_variable.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/product2_variable.html
@@ -1455,12 +1455,12 @@
                             </div>
 
                             <div class="pc__info position-relative">
-                                <p class="pc__category">Dresses</p>
+                                <p class="pc__category">Áo Polo</p>
                                 <h6 class="pc__title">
-                                    <a href="product1_simple.html">Kirby T-Shirt</a>
+                                    <a href="product1_simple.html">Áo Polo Nam Procool ICONDENIM Seam Sealing</a>
                                 </h6>
                                 <div class="product-card__price d-flex">
-                                    <span class="money price">$17</span>
+                                    <span class="money price">389.000đ</span>
                                 </div>
 
                                 <button
@@ -1490,12 +1490,12 @@
                             </div>
 
                             <div class="pc__info position-relative">
-                                <p class="pc__category">Dresses</p>
+                                <p class="pc__category">Áo Hoodie</p>
                                 <h6 class="pc__title">
-                                    <a href="product1_simple.html">Cropped Faux Leather Jacket</a>
+                                    <a href="product1_simple.html">Áo Hoodie Nam ICONDENIM ft MARVEL Deadpool</a>
                                 </h6>
                                 <div class="product-card__price d-flex">
-                                    <span class="money price">$29</span>
+                                    <span class="money price">399.000đ</span>
                                 </div>
                                 <div class="product-card__review d-flex align-items-center">
                                     <div class="reviews-group d-flex">
@@ -1545,12 +1545,13 @@
                             </div>
 
                             <div class="pc__info position-relative">
-                                <p class="pc__category">Dresses</p>
+                                <p class="pc__category">Áo Polo</p>
                                 <h6 class="pc__title">
-                                    <a href="product1_simple.html">Calvin Shorts</a>
+                                    <a href="product1_simple.html">Áo Polo Nam Procool ICONDENIM Seam Sealing
+                                    </a>
                                 </h6>
                                 <div class="product-card__price d-flex">
-                                    <span class="money price">$62</span>
+                                    <span class="money price">389.000đ</span>
                                 </div>
 
                                 <button
@@ -1580,12 +1581,12 @@
                             </div>
 
                             <div class="pc__info position-relative">
-                                <p class="pc__category">Dresses</p>
+                                <p class="pc__category">Áo Thun</p>
                                 <h6 class="pc__title">
-                                    <a href="product1_simple.html">Shirt In Botanical Cheetah Print</a>
+                                    <a href="product1_simple.html">Áo Thun Nam ICONDENIM MARVEL Captain Sentinel Of Liberty</a>
                                 </h6>
                                 <div class="product-card__price d-flex">
-                                    <span class="money price">$62</span>
+                                    <span class="money price">349.000đ</span>
                                 </div>
 
                                 <button
@@ -1615,12 +1616,12 @@
                             </div>
 
                             <div class="pc__info position-relative">
-                                <p class="pc__category">Dresses</p>
+                                <p class="pc__category">Áo Polo</p>
                                 <h6 class="pc__title">
-                                    <a href="product1_simple.html">Cotton Jersey T-Shirt</a>
+                                    <a href="product1_simple.html">Áo Polo ICONDENIM Shade Flow</a>
                                 </h6>
                                 <div class="product-card__price d-flex">
-                                    <span class="money price">$17</span>
+                                    <span class="money price">314.000đ</span>
                                 </div>
 
                                 <button
@@ -1650,13 +1651,13 @@
                             </div>
 
                             <div class="pc__info position-relative">
-                                <p class="pc__category">Dresses</p>
+                                <p class="pc__category">Áo Thun</p>
                                 <h6 class="pc__title">
-                                    <a href="product1_simple.html">Cableknit Shawl</a>
+                                    <a href="product1_simple.html">Áo Thun Nam Procool ICONDENIM Seam Sealing</a>
                                 </h6>
                                 <div class="product-card__price d-flex">
-                                    <span class="money price price-old">$129</span>
-                                    <span class="money price price-sale">$99</span>
+                                    <span class="money price price-old">359.000đ</span>
+                                    <span class="money price price-sale">319.000đ</span>
                                 </div>
 
                                 <button
@@ -1686,12 +1687,12 @@
                             </div>
 
                             <div class="pc__info position-relative">
-                                <p class="pc__category">Dresses</p>
+                                <p class="pc__category">Áo Sơ Mi</p>
                                 <h6 class="pc__title">
-                                    <a href="product1_simple.html">Colorful Jacket</a>
+                                    <a href="product1_simple.html">Áo Sơ Mi Nam Bamboo ICONDENIM Vertical Stripe</a>
                                 </h6>
                                 <div class="product-card__price d-flex">
-                                    <span class="money price">$29</span>
+                                    <span class="money price">390.000đ</span>
                                 </div>
 
                                 <button
@@ -1721,13 +1722,13 @@
                             </div>
 
                             <div class="pc__info position-relative">
-                                <p class="pc__category">Dresses</p>
+                                <p class="pc__category">Áo Sơ Mi</p>
                                 <h6 class="pc__title">
-                                    <a href="product1_simple.html">Zessi Dresses</a>
+                                    <a href="product1_simple.html">Áo Sơ Mi Nam ICONDENIM Oxford</a>
                                 </h6>
                                 <div class="product-card__price d-flex">
-                                    <span class="money price price-old">$129</span>
-                                    <span class="money price price-sale">$99</span>
+                                    <span class="money price price-old">399.000đ</span>
+                                    <span class="money price price-sale">329.000đ</span>
                                 </div>
 
                                 <button
